Update Statistical Models with bins.ipynb

--- a/Statistical Models with bins.ipynb
+++ b/Statistical Models with bins.ipynb
@@ -151,7 +151,7 @@
     "    ax.plot(x_sorted, y_pred_powerlaw, label=f'Power Law (R²={powerlaw_r2:.2f})', color='pink')\n",
     "    ax.plot(x_sorted, linear_model.predict(x_sorted.reshape(-1, 1)), color='red', label=f'Linear (R²={linear_r2:.2f})')\n",
     "    \n",
-    "    # Add binned average values as black stars\n",
+    "    # Add binned average values \n",
     "    bin_means, bin_edges, _ = stats.binned_statistic(x_data, y_data, statistic='mean', bins=20)\n",
     "    bin_centers = (bin_edges[:-1] + bin_edges[1:]) / 2\n",
     "    valid = ~np.isnan(bin_means)\n",
