--- a/Impact_MeasuringMethod_Climate_onGR.ipynb
+++ b/Impact_MeasuringMethod_Climate_onGR.ipynb
@@ -160,10 +160,10 @@
     "# Define moving average window size\n",
     "window_size = 10\n",
     "\n",
-    "# 🔹 Compute moving average separately for each method\n",
+    "# Compute moving average separately for each method\n",
     "df_filtered[\"Moving_Avg_Method\"] = df_filtered.groupby(\"Method\")[\"Recharge fraction\"].transform(lambda x: x.rolling(window=window_size, min_periods=1).mean())\n",
     "\n",
-    "# 🔹 Compute moving average for all methods together\n",
+    "# Compute moving average for all methods together\n",
     "df_filtered[\"Moving_Avg_All\"] = df_filtered[\"Recharge fraction\"].rolling(window=window_size, min_periods=1).mean()\n",
     "\n",
     "\n",
