--- a/CorrelationAnalysis_DifferentClimateZone.ipynb
+++ b/CorrelationAnalysis_DifferentClimateZone.ipynb
@@ -483,7 +483,7 @@
    ],
    "source": [
     "# Create a figure with 2 rows and 3 columns\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(10, 8))  # Adjusted for better visibility\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 8))  
     "axes = axes.flatten()  # Flatten for easy iteration\n",
     "\n",
     "# Labels for subplots\n",
@@ -544,7 +544,7 @@
    ],
    "source": [
     "# Create a figure with 2 rows and 3 columns\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(10, 8))  # Adjusted for better visibility\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 8)),
     "axes = axes.flatten()  # Flatten for easy iteration\n",
     "\n",
     "# Labels for subplots\n",
