--- a/CorrelationAnalysis_DifferentClimateZone.ipynb
+++ b/CorrelationAnalysis_DifferentClimateZone.ipynb
@@ -483,7 +483,7 @@
    ],
    "source": [
     "# Create a figure with 2 rows and 3 columns\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(10, 8))  
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 8))  # Adjusted for better visibility\n",
     "axes = axes.flatten()  # Flatten for easy iteration\n",
     "\n",
     "# Labels for subplots\n",
@@ -544,7 +544,7 @@
    ],
    "source": [
     "# Create a figure with 2 rows and 3 columns\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(10, 8)),
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 8))  # Adjusted for better visibility\n",
     "axes = axes.flatten()  # Flatten for easy iteration\n",
     "\n",
     "# Labels for subplots\n",
@@ -708,6 +708,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e79b99f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c73b60ed",
    "metadata": {},
    "outputs": [],
    "source": []
